tests/paczka1/small_fuzzy/69044525.err
Error in line 2: hphH S781 42,39
Error in line 7: QwfpTyj S781 35,9
Error in line 9: QwfpTyj S379 46,6
Error in line 10: 5b6lJ S734 98,0
Error in line 11: QwfpTyj S734 62,3
